--- a/web-pos/dashboard.css
+++ b/web-pos/dashboard.css
@@ -67,37 +67,78 @@ body {
     font-size: .75rem;
     text-transform: uppercase;
 }
-
-/*
- * Navbar
- */
-
-.navbar-brand {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    font-size: 1rem;
-    background-color: rgba(0, 0, 0, .25);
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-}
-
-.navbar .navbar-toggler {
-    top: .25rem;
-    right: 1rem;
-}
-
-.navbar .form-control {
-    padding: .75rem 1rem;
-    border-width: 0;
+.input-group .input-group-addon {
+    background-color: transparent;
     border-radius: 0;
+    border-right-width: 0;
+    border-color: gray;
+}
+.flatRed {
+    background-color: gray;
+}
+.flatGreen {
+    background-color: gray;
 }
 
-.form-control-dark {
-    color: #fff;
-    background-color: rgba(255, 255, 255, .1);
-    border-color: rgba(255, 255, 255, .1);
+.dashboard-stats {
+    background-color: lightgrey;
+    position: relative;
+    min-height: 107px;
+    padding: 3px;
+    padding-left: 5%;
+    border-radius: 2px;
+    display: table;
+    width: 100%;
+    text-align: left;
+    margin-bottom: 10px;
 }
 
-.form-control-dark:focus {
-    border-color: transparent;
-    box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+@media only screen and (max-width: 767px) {
+    .top-bar img.flag_img {
+        width: 20px !important;
+    }
+    .top-bar .search {
+        margin: 10px auto;
+    }
+    .top-bar .search input {
+        height: 30px;
+    }
+    .top-bar .info-number.bell {
+        background-color: #fb5d5d;
+    }
+}
+@media only screen and (min-width: 1000px) and (max-width: 1400px) {
+    .dashboard-stats .left {
+        float: left;
+        padding-top: 5px;
+    }
+    .dashboard-stats .left h3 {
+        font-size: 20px;
+    }
+    .dashboard-stats .left h4 {
+        font-size: 14px;
+    }
+    .dashboard-stats .right {
+        position: absolute;
+        right: 3px;
+        top: 3px;
+        width: 40%;
+        bottom: 3px;
+        border-radius: 2px;
+        font-size: 38px;
+        text-align: center;
+        color: #FFFFFF;
+    }
+    .dashboard-stats .right i {
+        vertical-align: middle;
+        line-height: 107px;
+    }
+    .nav-item{
+        padding: 5px;
+    }
+    #to-align{
+        margin-top: 10px;
+    }
+
+
 }
